Remove any unnecessary code. Fix the endpoints in the api. Reformat the table for readings to increase readability.

--- a/frontend/marsapp/src/App.css
+++ b/frontend/marsapp/src/App.css
@@ -930,16 +930,10 @@ li a {
     border-radius: 3px;
 }
 
-.html-table th {
-    color: rgba(0, 0, 0, 0.54);
-    /* The table's header mustn't be transparent, otherwise the body content will appear under it on scroll. */
-    background-color: #ffffff;
-    font-weight: normal;
-}
-
 .html-table th,
 .html-table td {
-    padding: 10px 80px 10px 10px;
+    padding: 10px 50px 10px 10px;
+    margin-right: auto;
     border-bottom: 1px solid #eaeaea;
     border-right: 1px solid #eaeaea;
     font-size: 14px;
@@ -947,18 +941,12 @@ li a {
     text-align: left;
 }
 
-#first {
-    padding: 5px;
-    margin-right: auto;
-    margin-left: auto;
-}
-
 #octagon {
     width: 50px;
     height: 50px;
     background: red;
     position: relative;
-    margin-left: 3px;
+    margin-left: -3px;
 }
 #octagon:before {
     content: "";
@@ -988,8 +976,8 @@ li a {
     height: 50px;
     background: green;
     border-radius: 50%;
-    position: relative;
-    margin-left: 3px;
+    position: center;
+    margin-left: -3px;
 }
 
 #triangle{
@@ -999,7 +987,7 @@ li a {
     border-right: 25px solid transparent;
     border-bottom: 50px solid yellow;
     position: relative;
-    margin-left: 3px;
+    margin-left: -3px;
 }
 
 #pat-detail > div.row > div.col > div{
@@ -1010,3 +998,10 @@ li a {
     font-family: "Helvetica Neue", sans-serif;
 }
 
+#reading-response {
+    padding: 0px !important;
+}
+
+#first {
+    margin-left: 14px !important;
+}
